# pico-microphone

./: CMakeLists.txt  data.c  hw_config.c  upload.sh
